--- a/tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html
+++ b/tootoo/r6/ladybug-web/tt6-ladybug-web-r1.html
@@ -30,7 +30,7 @@
 		branch: 'gh-pages',
 		path: path,
 
-		infoLink : 'https://github.com/laddybug-tools/ladybug-web/',
+		infoLink : 'https://github.com/ladybug-tools/ladybug-web/',
 //		tagLine : 'Browse & view stuff on Ladybug Web real fast!',
 		subText : 'Browse & view stuff on Ladybug Web real fast!',
 		title : 'tt6 Ladybug Web',
@@ -46,7 +46,7 @@
 
 `## Ladybug Web
 
-* [Ladybug Web Read Me]( #readme.md )
+* [Ladybug Web Read Me]( #README.md )
 * [Coding Style]( #coding-style.md )
 * [License]( #license.md )
 
