--- a/tootoo/r6/pushme-pullyou/tt6-pushme-pullyou-r1.html
+++ b/tootoo/r6/pushme-pullyou/tt6-pushme-pullyou-r1.html
@@ -68,8 +68,6 @@
 #### TooToo 5
 * [TooToo Anywhere Read Me]( #tootoo/r5/anywhere/README.md )
 * [Best-websites-a-programmer-should-visit Read Me]( #tootoo/r5/best-websites/README.md )
-* [BS2017 Sponsor Links Read Me]( http://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html)
-* &#x1F5D7; [Building Simulation 2017 Sponsors]( https://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html )
 * [Ladybug Tools View Read Me ]( #tootoo/r5/ladybug-tools-view/README.md )
 * &#x1F5D7; [Ladybug Tools View]( https://pushme-pullyou.github.io/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html )
 * [Parallel Constitution Read Me]( #tootoo/r5/parallel-constitution/README.md )
@@ -83,8 +81,10 @@
 #### Utilities
 * [Utilities Read Me]( #utilities/README.md )
 * [Make Read Me Read Me]( #utilities/make-github-readme2/README.md )
+* [Read Me Template]( #utilities/make-github-readme2/github-readme-template.md )
 * [Merge Files into one]( #utilities/merge-files-into-one/README.md )
 * [Markdown Cheat Sheet]( #utilities/markdown-cheat-sheet.md )
+* &#x1F5D7; [Building Simulation 2017 Sponsors]( https://pushme-pullyou.github.io/utilities/bs2017-sponsor-links/bs2017-sponsor-links-r2.html )
 `;
 
 	TYP.typeSelectedIndex = 0;
