--- a/tootoo-templates/latest.html
+++ b/tootoo-templates/latest.html
@@ -6,8 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../../../index.html#tootoo/r6/anywhere/README.md';
-
+	window.location.href = '../xxxxxz.html' + location.hash;
 
 </script>
 </body>
