--- a/tootoo/utilities/bs2017-sponsor-links/bs2017-sponsor-links-r2.html
+++ b/tootoo/utilities/bs2017-sponsor-links/bs2017-sponsor-links-r2.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo BuildingSim 2017 R1</title>
+<title>TooToo BuildingSim 2017 R2</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view sites in BS 2017 with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -127,6 +127,8 @@ button, input[type=button] { background-color: #ccc; border: 2px #fff solid; col
 		let parser = new DOMParser();
 
 		doc = parser.parseFromString( xhr.target.response, 'text/html' );
+
+console.log( '', doc );
 		allLinks = doc.getElementsByTagName( 'a' );
 		externalLinks = [];
 		linksInText = []
