--- a/tootoo-templates/basic-html.html
+++ b/tootoo-templates/basic-html.html
@@ -2,9 +2,10 @@
 <html lang = "en" >
 <head>
 <meta charset = "utf-8" >
-<meta name = description content = "Basic HTML template" >
-<meta name = keywords content = "JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = date content = "2017-08-04" >
+<meta name = "viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
+<meta name = "description" content = "Basic HTML template" >
+<meta name = "keywords" content = "JavaScript,GitHub,FOSS,3D,STEM" >
+<meta name = "date" content = "2017-08-04" >
 <title></title>
 <style>
 
