--- a/tootoo-users/diana-chace/index.html
+++ b/tootoo-users/diana-chace/index.html
@@ -8,19 +8,20 @@
 <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no" >
 
 <!-- Mr.doob
-<meta name = "viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 -->
 <meta name = description content = "File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = keywords content = "ShowDown,Markdown,AJAX,JavaScript,HTML,CSS,GitHub,FOSS" >
-<meta name = date content = "2017-08-16" >
-
-<title></title>
-
+<meta name=date content = "2017-08-16" >
+<title>Diana Chace</title>
+<!--
+<base href="https://dianachace.github.io/" target="_blank" >
+-->
 <style id = "foo" >
 
 /* items mostly in tag/class/id then alphabetical order */
 
-body, html { background-color: #fefefe; font: 12pt monospace; height: 100%; margin: 0; /* overflow: hidden; */ }
+body, html { background-color: #fefefe; font: 14pt monospace; height: 100%; margin: 0; /* overflow: hidden; */ }
 
 a { color: crimson; }
 
@@ -123,7 +124,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 <script>
 
 
-	let projectName = '';
+	let projectName = 'diana-chace';
 
 	init();
 
@@ -174,7 +175,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 		if ( !url ) {
 
-			url = 'README.md';
+			url = 'https://dianachace.github.io/home-page.html';
 			requestFile( url, mainContents );
 
 // Set issues as blog on home page
