--- a/tootoo-more/index.html
+++ b/tootoo-more/index.html
@@ -8,15 +8,22 @@
 <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no" >
 
 <!-- Mr.doob
-<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+<meta name = "viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
 -->
 <meta name = description content = "File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = keywords content = "ShowDown,Markdown,AJAX,JavaScript,HTML,CSS,GitHub,FOSS" >
-<meta name=date content = "2017-08-16" >
+<meta name = date content = "2017-08-16" >
+
+<title></title>
 
 <style id = "foo" >
 
-/* items mostly in tag/class/id then alphabetical order */
+/* items in mostly in order of: tag/class/id then alphabetical */
+
+
+html {
+	--menu-width: 250px
+}
 
 body, html { background-color: #fefefe; font: 12pt monospace; height: 100%; margin: 0; /* overflow: hidden; */ }
 
@@ -46,20 +53,19 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 #butEditFile img { vertical-align: middle; width: 24px; }
 
 #hamburger {
-	background-color: #edd; cursor:pointer; font-size:30px;	left: 250px; line-height: 30px; margin: 0; opacity: 0.5;
-	padding: 5px 15px 8px 10px; position: fixed; top: 60px; transition: left .5s; z-index: 1;
+	background-color: #edd; cursor:pointer; font-size:30px;	left: var( --menu-width ); line-height: 35px; margin: 0; opacity: 0.5;
+	padding: 5px 15px 8px 10px; position: fixed; top: 80px; transition: left .5s; z-index: 1;
 }
 
 #hamburger:hover { cursor: pointer; opacity: 1; }
 
 #ifrMain { border-width: 0; height: 100%; margin: 0; width: 100%; }
 
-#main { height: 100%; margin-left: 250px; transition: margin-left .5s; position: absolute; top: 0; width: calc(100% - 250px); }
-
+#main { height: 100%; margin-left: var( --menu-width ); transition: margin-left .5s; position: absolute; top: 0; width: calc(100% - 250px); }
 
 #menu {
 	background-color: lightgray; box-sizing: border-box; height: 100%; left: 0; overflow: auto;
-	position: fixed; top: 0; transition: 0.5s; width: 250px; z-index: 1;
+	position: fixed; top: 0; transition: 0.5s; width: var( --menu-width ); z-index: 1;
 }
 
 
@@ -108,7 +114,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 	</div>
 
 
-	<div id = "hamburger" onclick = "toggleNav();" > &#9776; slide</div>
+	<div id = "hamburger" onclick = "slideMenu();" > &#9776; slide</div>
 
 
 	<div id = "butEditFile" onclick = "onclickEditButton();" title = "Update this file on GitHub" ><img src = "https://status.github.com/images/invertocat.png" > Edit this file</div>
@@ -121,9 +127,9 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 <script>
 
+//	document.body.style.setProperty('--menu-width', '325px' );
 
 	let projectName = '';
-
 
 	init();
 
@@ -138,11 +144,11 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 		showdown.setFlavor( 'github' );
 
-		requestFile( 'menu-head.md', menuHead );
+		requestFile( './menu/menu-head.md', menuHead );
 
-		requestFile( 'menu-body.md', menuBody );
+		requestFile( './menu/menu-body.md', menuBody );
 
-		requestFile( 'menu-foot.md', menuFoot );
+		requestFile( './menu/menu-foot.md', menuFoot );
 
 		onHashChange();
 
@@ -162,7 +168,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 	function onHashChange() {
 
-		let url, target;
+		let url;
 
 		url = location.hash.slice( 1 );
 
@@ -182,12 +188,13 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 //			main.innerHTML = '<iframe id=iframeMain class=iframeReadMe src=' + url + ' ></iframe>';
 //			main.style.overflow = 'hidden';
 
-		} else if ( url.startsWith( 'menu' ) ) {
+		} else if ( url.startsWith( '.\/menu' ) ) {
 
 			menuBody.innerHTML = '<div id=menuContents class=menu ></div>';
 
 			requestFile( url, menuBody );
 
+// needed??
 		} else if ( url.startsWith( 'html' ) ) {
 
 			menu.innerHTML = '<iframe id=ifrMenu class=iframeMenu src=' + url + ' ></iframe>';
@@ -219,36 +226,46 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 	function onWindowResize(){
 
-		let ifrs;
+// iframes inside iframes/plugins: take care of resisize themselves
 
-		ifrs = document.getElementsByClassName( 'iframeReadMe' );
+// menu & button
+		let iframes = document.getElementsByClassName( 'iframeReadMe' );
 
-		if ( window.innerWidth < 1000 ) {
+		if ( window.innerWidth < 1350 ) {
 
 			butEditFile.style.display = 'none';
+			hamburger.innerHTML = '&#9776;';
+			hamburger.style.top = '30px';
 
-			for ( let i = 0; i < ifrs.length; i++ ) {
+			for ( var i = 0; i < iframes.length; i++ ) {
 
-				ifrs[ i ].style.display = 'none';
+				if ( iframes[ i ].className === 'iframeReadMe' ) {
+
+					iframes[ i ].style.display = 'none';
+
+				}
 
 			}
-
-			hamburger.innerHTML = '&#9776;';
 
 		} else {
 
 			butEditFile.style.display = '';
+			hamburger.innerHTML = '&#9776; slide';
+			hamburger.style.top = '80px';
 
-			for ( i = 0; i < ifrs.length; i++ ) {
+			for ( var i = 0; i < iframes.length; i++ ) {
 
-				ifrs[ i ].style.display = '';
+				if ( iframes[ i ].className === 'iframeReadMe' ) {
+
+					iframes[ i ].style.display = '';
+
+				}
 
 			}
 
-			hamburger.innerHTML = '&#9776; slide';
-
 		}
 
+// main
 		if ( !menu.style.width || menu.style.width === '250px' ) {
 
 			main.style.width = ( window.innerWidth - 250 ) + 'px';
@@ -263,7 +280,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 
 
-	function toggleNav() {
+	function slideMenu() {
 
 		if ( !menu.style.width || menu.style.width === '250px' ) {
 
@@ -313,11 +330,19 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 //			projectName = document.links[ 0 ].text;
 
+			onload();
+			onWindowResize();
+
 		};
 
 		xhr.send( null );
 
 	}
+
+
+// plugins redefine as needed
+
+	function onload() {}
 
 
 </script>
