--- a/tootoo8-core/index.html
+++ b/tootoo8-core/index.html
@@ -18,7 +18,12 @@
 
 <style id = "foo" >
 
-/* items mostly in tag/class/id then alphabetical order */
+/* items in mostly in order of: tag/class/id then alphabetical */
+
+
+html {
+	--menu-width: 250px
+}
 
 body, html { background-color: #fefefe; font: 12pt monospace; height: 100%; margin: 0; /* overflow: hidden; */ }
 
@@ -48,19 +53,19 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 #butEditFile img { vertical-align: middle; width: 24px; }
 
 #hamburger {
-	background-color: #edd; cursor:pointer; font-size:30px;	left: 250px; line-height: 30px; margin: 0; opacity: 0.5;
-	padding: 5px 15px 8px 10px; position: fixed; top: 60px; transition: left .5s; z-index: 1;
+	background-color: #edd; cursor:pointer; font-size:30px;	left: var( --menu-width ); line-height: 35px; margin: 0; opacity: 0.5;
+	padding: 5px 15px 8px 10px; position: fixed; top: 80px; transition: left .5s; z-index: 1;
 }
 
 #hamburger:hover { cursor: pointer; opacity: 1; }
 
 #ifrMain { border-width: 0; height: 100%; margin: 0; width: 100%; }
 
-#main { height: 100%; margin-left: 250px; transition: margin-left .5s; position: absolute; top: 0; width: calc(100% - 250px); }
+#main { height: 100%; margin-left: var( --menu-width ); transition: margin-left .5s; position: absolute; top: 0; width: calc( 100% - var( --menu-width ) ); }
 
 #menu {
 	background-color: lightgray; box-sizing: border-box; height: 100%; left: 0; overflow: auto;
-	position: fixed; top: 0; transition: 0.5s; width: 250px; z-index: 1;
+	position: fixed; top: 0; transition: 0.5s; width: var( --menu-width ); z-index: 1;
 }
 
 
@@ -109,7 +114,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 	</div>
 
 
-	<div id = "hamburger" onclick = "toggleNav();" > &#9776; slide</div>
+	<div id = "hamburger" onclick = "onClickSlideMenu();" > &#9776; slide</div>
 
 
 	<div id = "butEditFile" onclick = "onclickEditButton();" title = "Update this file on GitHub" ><img src = "https://status.github.com/images/invertocat.png" > Edit this file</div>
@@ -122,6 +127,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 <script>
 
+//	document.body.style.setProperty('--menu-width', '325px' );
 
 	let projectName = '';
 
@@ -138,11 +144,11 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 		showdown.setFlavor( 'github' );
 
-		requestFile( 'menu-head.md', menuHead );
+		requestFile( './menu/menu-head.md', menuHead );
 
-		requestFile( 'menu-body.md', menuBody );
+		requestFile( './menu/menu-body.md', menuBody );
 
-		requestFile( 'menu-foot.md', menuFoot );
+		requestFile( './menu/menu-foot.md', menuFoot );
 
 		onHashChange();
 
@@ -182,7 +188,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 //			main.innerHTML = '<iframe id=iframeMain class=iframeReadMe src=' + url + ' ></iframe>';
 //			main.style.overflow = 'hidden';
 
-		} else if ( url.startsWith( 'menu' ) ) {
+		} else if ( url.startsWith( '.\/menu' ) ) {
 
 			menuBody.innerHTML = '<div id=menuContents class=menu ></div>';
 
@@ -220,14 +226,17 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 	function onWindowResize(){
 
-// iframes inside iframes have to take care of themselves
+// iframes inside iframes/plugins: take care of resisize themselves
 
+// menu & button
 		let iframes = document.getElementsByClassName( 'iframeReadMe' );
 
-		if ( window.innerWidth < 1000 ) {
+		if ( window.innerWidth < 1350 ) {
 
 			butEditFile.style.display = 'none';
 			hamburger.innerHTML = '&#9776;';
+			hamburger.style.top = '0';
+			main.style.top = '30px';   // not good for full screen
 
 			for ( var i = 0; i < iframes.length; i++ ) {
 
@@ -243,6 +252,8 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 			butEditFile.style.display = '';
 			hamburger.innerHTML = '&#9776; slide';
+			hamburger.style.top = '80px';
+			main.style.top = '0';
 
 			for ( var i = 0; i < iframes.length; i++ ) {
 
@@ -256,6 +267,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 		}
 
+// main
 		if ( !menu.style.width || menu.style.width === '250px' ) {
 
 			main.style.width = ( window.innerWidth - 250 ) + 'px';
@@ -270,7 +282,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 
 
-	function toggleNav() {
+	function onClickSlideMenu() {
 
 		if ( !menu.style.width || menu.style.width === '250px' ) {
 
@@ -330,8 +342,10 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 	}
 
 
+// plugins: redefine as needed
 
 	function onload() {}
+
 
 </script>
 </body>
