--- a/tootoo-users/theo-armour/index.html
+++ b/tootoo-users/theo-armour/index.html
@@ -18,7 +18,7 @@
 
 <style id = "foo" >
 
-/* items mostly in tag/class/id then alphabetical order */
+/* items in mostly in order of: tag/class/id then alphabetical */
 
 
 html {
@@ -61,7 +61,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 #ifrMain { border-width: 0; height: 100%; margin: 0; width: 100%; }
 
-#main { height: 100%; margin-left: var( --menu-width ); transition: margin-left .5s; position: absolute; top: 0; width: calc(100% - 250px); }
+#main { height: 100%; margin-left: var( --menu-width ); transition: margin-left .5s; position: absolute; top: 0; width: calc( 100% - var( --menu-width ) ); }
 
 #menu {
 	background-color: lightgray; box-sizing: border-box; height: 100%; left: 0; overflow: auto;
@@ -114,7 +114,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 	</div>
 
 
-	<div id = "hamburger" onclick = "toggleNav();" > &#9776; slide</div>
+	<div id = "hamburger" onclick = "onClickSlideMenu();" > &#9776; slide</div>
 
 
 	<div id = "butEditFile" onclick = "onclickEditButton();" title = "Update this file on GitHub" ><img src = "https://status.github.com/images/invertocat.png" > Edit this file</div>
@@ -231,15 +231,17 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 	function onWindowResize(){
 
-// iframes inside iframes have to take care of themselves
+// iframes inside iframes/plugins: take care of resize themselves
 
+// menu & button
 		let iframes = document.getElementsByClassName( 'iframeReadMe' );
 
 		if ( window.innerWidth < 1350 ) {
 
 			butEditFile.style.display = 'none';
 			hamburger.innerHTML = '&#9776;';
-			hamburger.style.top = '30px';
+			hamburger.style.top = '0';
+			main.style.top = '30px';   // not good for full screen
 
 			for ( var i = 0; i < iframes.length; i++ ) {
 
@@ -256,6 +258,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 			butEditFile.style.display = '';
 			hamburger.innerHTML = '&#9776; slide';
 			hamburger.style.top = '80px';
+			main.style.top = '0';
 
 			for ( var i = 0; i < iframes.length; i++ ) {
 
@@ -269,6 +272,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 		}
 
+// main
 		if ( !menu.style.width || menu.style.width === '250px' ) {
 
 			main.style.width = ( window.innerWidth - 250 ) + 'px';
@@ -283,7 +287,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 
 
-	function toggleNav() {
+	function onClickSlideMenu() {
 
 		if ( !menu.style.width || menu.style.width === '250px' ) {
 
@@ -343,8 +347,10 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 	}
 
 
+// plugins: redefine as needed
 
 	function onload() {}
+
 
 </script>
 </body>
