--- a/tootoo8-core/index.html
+++ b/tootoo8-core/index.html
@@ -226,7 +226,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 
 	function onWindowResize(){
 
-// iframes inside iframes/plugins: take care of resisize themselves
+// iframes inside iframes/plugins: take care of resize themselves
 
 // menu & button
 		let iframes = document.getElementsByClassName( 'iframeReadMe' );
