--- a/tootoo8-core/index.html
+++ b/tootoo8-core/index.html
@@ -155,7 +155,7 @@ blockquote, pre { background-color: #eee; padding: 10px; }
 		window.addEventListener( 'hashchange', onHashChange, false );
 
 //		window.addEventListener( 'orientationchange', function() { window.location.reload(); } );
-
+		window.addEventListener( 'orientationchange', function() { main.style.height = window.innerHeight + 'px'; } );
 		window.addEventListener( 'orientationchange', onWindowResize, false  );
 
 		window.addEventListener( 'resize', onWindowResize, false );
