--- a/tootoo-templates/template-threejs-basic.html
+++ b/tootoo-templates/template-threejs-basic.html
@@ -2,11 +2,11 @@
 <html lang = "en" >
 <head>
 <meta charset = "utf-8" >
-<meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
+<meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
+<meta name=description content="3D in your browser" >
+<meta name = "keywords" content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
+<meta name = "date" content = "2017-08-01" >
 <title></title>
-<meta name = description content = 'Basic HTML template with basic slide in and slide out menu with three bar icon that adjusts for small screen size' >
-<meta name = keywords content='JavaScript,GitHub,FOSS,3D,STEM' >
-<meta name = date content='2017-08-01' >
 <style>
 
 	body { font: 11pt monospace; margin: 0; overflow: hidden; }
@@ -47,6 +47,7 @@
 		scene = new THREE.Scene();
 
 		window.addEventListener( 'resize', onWindowResize, false );
+		window.addEventListener( 'orientationchange', onWindowResize, false );
 
 		let axisHelper = new THREE.AxisHelper( 50 );
 		scene.add( axisHelper );
