--- a/tootoo-templates/template-threejs-basic.html
+++ b/tootoo-templates/template-threejs-basic.html
@@ -10,7 +10,7 @@
 <style>
 
 	body { font: 11pt monospace; margin: 0; overflow: hidden; }
-	#menu { position: absolute; text-align: center; width: 100%; }
+	#header { position: absolute; text-align: center; width: 100%; }
 
 </style>
 </head>
@@ -18,15 +18,15 @@
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js" ></script>
 
-	<div id = "menu" >
+	<div id = "header" >
 		<div id = "title" ></div>
 		<div id = "contents" ></div>
 	</div>
 
 <script>
 
-	var renderer, camera, controls, scene;
-	var geometry, material, mesh;
+	let renderer, camera, controls, scene;
+	let geometry, material, mesh;
 
 	init();
 	animate();
@@ -58,6 +58,8 @@
 
 		scene.add( mesh );
 
+
+
 	}
 
 
@@ -76,6 +78,7 @@
 
 		requestAnimationFrame( animate );
 		renderer.render( scene, camera );
+		controls.update();
 
 	}
 
