--- a/tootoo8-core/index.html
+++ b/tootoo8-core/index.html
@@ -21,7 +21,7 @@ a { color: crimson; }
 blockquote, pre { background-color: #eee; padding: 10px; }
 
 	button, input[type=button] { background-color: #ddd; border: none; color: #322; cursor: pointer; padding: 3px 20px; }
-	button:hover { background: #ccc; color: #fff }
+	button:hover { background-color: #ccc; color: #fff }
 
 	input[type=range] { -webkit-appearance: none; -moz-appearance: none; background-color: #ddd; width: 160px; }
 	input[type=range]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }
