--- a/tootoo-templates/threejs-basic.html
+++ b/tootoo-templates/threejs-basic.html
@@ -1,16 +1,22 @@
-﻿<!doctype html>
-<html lang = "en" >
+<!doctype html>
+<html lang="en" >
 <head>
-<meta charset = "utf-8" >
+<meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="3D in your browser" >
-<meta name = "keywords" content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-08-01" >
+<meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
+<meta name = "date" content = "2017-10-07" >
 <title></title>
 <style>
 
 	body { font: 11pt monospace; margin: 0; overflow: hidden; }
-	#header { position: absolute; text-align: center; width: 100%; }
+	a { color: crimson; text-decoration: none; }
+	a:hover, a:focus { background-color: yellow; color: #aaa; text-decoration: underline }
+
+	button, input[type=button] { background-color: #ddd; border: none; color: #322; cursor: pointer; padding: 3px 5px; }
+	button:hover { background: #ccc; color: #fff }
+
+	#menu { position: absolute; text-align: center; width: 100%; }
 
 </style>
 </head>
@@ -18,15 +24,19 @@
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js" ></script>
 
-	<div id = "header" >
+	<div id = "menu" >
+
 		<div id = "title" ></div>
-		<div id = "contents" ></div>
+		<div id = "contents" >
+			<button onclick=controls.autoRotate=!controls.autoRotate; >rotation</button>
+		</div>
+
 	</div>
 
 <script>
 
-	let renderer, camera, controls, scene;
-	let geometry, material, mesh;
+	var renderer, camera, controls, scene;
+	var geometry, material, mesh;
 
 	init();
 	animate();
@@ -37,28 +47,37 @@
 
 		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true }  );
 		renderer.setSize( window.innerWidth, window.innerHeight );
+
+
 		document.body.appendChild( renderer.domElement );
 
 		camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
 		camera.position.set( 100, 100, 100 );
+		camera.up.set( 0, 0, 1 );
 
 		controls = new THREE.OrbitControls( camera, renderer.domElement );
 
 		scene = new THREE.Scene();
 
+		const ambient = new THREE.AmbientLight( 0x444444 );
+		scene.add( ambient );
+
+		const directionalLight = new THREE.DirectionalLight( 0xffeedd );
+		directionalLight.position.set( 0, 0, 1 ).normalize();
+		scene.add( directionalLight );
+
 		window.addEventListener( 'resize', onWindowResize, false );
+
 		window.addEventListener( 'orientationchange', onWindowResize, false );
 
-		let axisHelper = new THREE.AxisHelper( 50 );
-		scene.add( axisHelper );
+		const axesHelper = new THREE.AxesHelper( 50 );
+		scene.add( axieHelper );
 
 		geometry = new THREE.BoxGeometry( 50, 50, 50 );
 		material = new THREE.MeshNormalMaterial();
 		mesh = new THREE.Mesh( geometry, material );
 
 		scene.add( mesh );
-
-
 
 	}
 
@@ -71,7 +90,10 @@
 
 		renderer.setSize( window.innerWidth, window.innerHeight );
 
+//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
+
 	}
+
 
 
 	function animate() {
