--- a/tootoo-templates/latest.html
+++ b/tootoo-templates/latest.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../xxxxxz.html' + location.hash;
+	window.location.href = '../index.html' + location.hash;
 
 </script>
 </body>
