--- a/tootoo-templates/threejs-shade.html
+++ b/tootoo-templates/threejs-shade.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
-<meta name=description content="3D in your browser" >
+<meta name=description content="Real-time 3D in your browser" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-10-02" >
+<meta name = "date" content = "2017-11-10" >
 <title>Template Three.js Shade</title>
 <style>
 
@@ -38,9 +38,9 @@
 
 	const infoURI = 'https://github.com/ladybug-tools/spider/tree/master/sandbox/scatter-well/';
 
-	var renderer, camera, controls, scene;
-
-	var lightAmbient, lightDirectional, cameraHelper, gridHelper, axesHelper;
+	let renderer, camera, controls, scene;
+	let lightAmbient, lightDirectional
+	let cameraHelper, gridHelper, axesHelper;
 
 	init();
 	animate();
@@ -51,18 +51,20 @@
 			'<h3><a  href = "" >' + document.title + '</a> &nbsp; ' + 
 			'<a href=' + infoURI + ' target="top" >&#x24D8</a></h3>';
 
+		const size = 100
+
 		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true }  );
 		renderer.setSize( window.innerWidth, window.innerHeight );
 		renderer.shadowMap.enabled = true;
 
 		document.body.appendChild( renderer.domElement );
 
-		camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
-		camera.position.set( 100, -100, 100 );
+		camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 10 * size );
+		camera.position.set( size, -size, size );
 		camera.up.set( 0, 0, 1 );
 
 		controls = new THREE.OrbitControls( camera, renderer.domElement );
-		controls.maxDistance = 600;
+		controls.maxDistance = 5 * size;
 		controls.autoRotate = true;
 
 		scene = new THREE.Scene();
@@ -70,11 +72,10 @@
 		lightAmbient = new THREE.AmbientLight( 0x444444 );
 		scene.add( lightAmbient );
 
-		const size = 100
+
 		lightDirectional = new THREE.DirectionalLight( 0xffeedd );
-//		lightDirectional.position.set( 1, -1, 1 ).normalize();
 		lightDirectional.position.set( -size, size, size );
-		lightDirectional.shadow.camera.scale.set( 13, 15, 0.5 );
+		lightDirectional.shadow.camera.scale.set( 0.1 * size, 0.1 * size, 0.5 );
 		lightDirectional.castShadow = true;
 		scene.add( lightDirectional );
 
@@ -90,15 +91,15 @@
 	}
 
 
-	function addHelpers() {
+	function addHelpers( size = 100 ) {
 
 		cameraHelper = new THREE.CameraHelper( lightDirectional.shadow.camera ) 
 		scene.add( cameraHelper );
 
-		axesHelper = new THREE.AxesHelper( 500 );
+		axesHelper = new THREE.AxesHelper( size );
 		scene.add( axesHelper );
 
-		gridHelper = new THREE.GridHelper( 500 );
+		gridHelper = new THREE.GridHelper( size );
 		gridHelper.geometry.applyMatrix( new THREE.Matrix4().makeRotationX( -0.5 * Math.PI ) );
 
 		scene.add( gridHelper );
