--- a/tootoo-templates/tootoo10/plugins/threejs-basic.html
+++ b/tootoo-templates/tootoo10/plugins/threejs-basic.html
@@ -3,20 +3,14 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
-<meta name=description content="Real-time 3D in your browser" >
+<meta name=description content="3D in your browser" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-11-13" >
+<meta name = "date" content = "2017-08-01" >
 <title></title>
 <style>
 
 	body { font: 11pt monospace; margin: 0; overflow: hidden; }
-	a { color: crimson; text-decoration: none; }
-	a:hover, a:focus { background-color: yellow; color: #aaa; text-decoration: underline }
-
-	button { background-color: #ddd; border: none; color: #322; cursor: pointer; padding: 3px 5px; }
-	button:hover { background: #ccc; color: #fff }
-
-	#divMenu { margin: 0 20px; position: absolute; }
+	#menu { position: absolute; text-align: center; width: 100%; }
 
 </style>
 </head>
@@ -24,14 +18,9 @@
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js" ></script>
 
-	<div id = "divMenu" >
-
-		<div id = "divTitle" ></div>
-
-		<div id = "divContents" >
-			<button onclick=controls.autoRotate=!controls.autoRotate; >rotation</button>
-		</div>
-
+	<div id = "menu" >
+		<div id = "title" ></div>
+		<div id = "contents" ></div>
 	</div>
 
 <script>
@@ -44,16 +33,21 @@
 
 	function init() {
 
-		divTitle.innerHTML = '<h1><a href="" >' + location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' ) +'</a></h1>';
+		if ( window.top !== window.self ) { 
+
+//			parent.divSubMenu.innerHTML = ''; // or iframe in here?
+//			parent.ifrMenu.src = 'plugins/screen-capture.html';
+
+		}
+
+		title.innerHTML = '<h1><a href="" >' + location.href.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) +'</a></h1>';
 
 		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true }  );
 		renderer.setSize( window.innerWidth, window.innerHeight );
-
 		document.body.appendChild( renderer.domElement );
 
 		camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
 		camera.position.set( 100, 100, 100 );
-		camera.up.set( 0, 0, 1 );
 
 		controls = new THREE.OrbitControls( camera, renderer.domElement );
 
@@ -63,12 +57,13 @@
 
 		window.addEventListener( 'orientationchange', onWindowResize, false );
 
-		const axesHelper = new THREE.AxesHelper( 50 );
+		let axesHelper = new THREE.AxesHelper( 50 );
 		scene.add( axesHelper );
 
 		geometry = new THREE.BoxGeometry( 50, 50, 50 );
 		material = new THREE.MeshNormalMaterial();
 		mesh = new THREE.Mesh( geometry, material );
+
 		scene.add( mesh );
 
 	}
@@ -92,7 +87,6 @@
 
 		requestAnimationFrame( animate );
 		renderer.render( scene, camera );
-		controls.update();
 
 	}
 
